...
        />
      );
    }

    return (
      <Appbar.Action
        testID="open_drawer_button"
        color="#000000"
        icon="menu"
        onPress={this.openDrawer}
      />
    );
  };
...
