...
  const dispatch = useDispatch();
  const { user } = useSelector(settingsStoreSelector);
  return (
    <DrawerContentScrollView
      {...props}
      contentContainerStyle={{ paddingTop: 0 }}
      testID="drawer_screen"
    >
      <View style={styles.header}>
        <SvgUri width={100} height={100} uri={user.image} />
        <Subheading style={styles.name}>{user.name}</Subheading>
      </View>
      {__DEV__ ? (
...
