...
  const incrementAppTouchesCount = () => {
    setCount(easterEggCount + 1);
  };

  return (
    <ScreenContainer
      containerProps={{ testID: 'about_screen' }}
      containerStyle={styles.container}
    >
      <ScrollView contentContainerStyle={styles.scrollView}>
        <View style={styles.content}>
          <View>
            <List.Item
...
