{
  "reviews": "Reviews",
  "inApp": "in App",
  "archivedList": "Archived Reviews",
  "settings": "Settings",
  "about": "About",
  "language": "Language",
  "clearNotifications": "Clear notifications",
  "clearNotificationsDescription": "When the app is opened, all the delivered notifications will be removed.",
  "reminderNotifications": "Reminder Notifications",
  "avatarEdit": "Avatar Edit",
  "avatarStyle": "Avatar Style",
...
