...
      showOnboarding,
      hideOnboarding,
    } = this.props;
    const { translate, strings } = this.context;
    return (
      <ScreenContainer
        containerProps={{ testID: 'review_list_screen' }}
        containerStyle={styles.container}
      >
        <SectionReviewList
          showHeader={!reviews.length}
          onPressEmptyState={this.openCreateInApp}
          data={[...reviews]}
...
            {
              icon: 'cellphone',
              label: translate(strings.inApp),
              onPress: this.openCreateInApp,
              color: colors.white,
              style: { backgroundColor: colors.pistonBlue },
              testID: 'in_app_button',
            },
            // {
            //   icon: 'link',
            //   label: 'External',
            //   onPress: this.openCreateFromExternal,
            //   color: colors.white,
...
